Correct <br> tag.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,7 +7,7 @@
 		<h1>Woodworking Projects</h1>
 			<h2>The Anarchist's Tool Chest</h2>
 				<p>
-					<a href="http://ebd2.github.io/portfolio/01-diven-toolchest.jpg">Toolchest - overall view</a></br>
+					<a href="http://ebd2.github.io/portfolio/01-diven-toolchest.jpg">Toolchest - overall view</a><br />
 					<a href="http://ebd2.github.io/portfolio/02-diven-dovetail-detail.jpg">Toolchest - dovetail detail</a>
 				</p>
 			<h2>Shelves</h2>
